// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="cl-text-input"
  >
    <div
      class="cl-text-input__wrapper"
    >
      <label
        class="sc-gJhJTp djgZQL cl-text-input__label"
        for="test-input-id"
      >
        <span
          class="sc-elDIKY QGqgT"
        >
          Test Input:
        </span>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="cl-text-input__textbox"
        id="test-input-id"
        name="testInput"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
    </div>
    <span
      class="sc-braxZu kmOXHf cl-text-input__error"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="cl-text-input"
  >
    <div
      class="cl-text-input__wrapper"
    >
      <label
        class="sc-gJhJTp djgZQL cl-text-input__label"
        for="test-input-id"
      >
        <span
          class="sc-elDIKY QGqgT"
        >
          Test Input:
        </span>
        <abbr
          class="sc-fQpRED uWPVK"
          title="required"
        >
          *
        </abbr>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="cl-text-input__textbox"
        id="test-input-id"
        name="testInput"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
    </div>
    <span
      class="sc-braxZu kmOXHf cl-text-input__error"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
